# TODO-APP

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  erroo.md
.claude/skills/: database_schema_architect.md  multi_user_data_isolation.md  neon_postgresql_serverless_integration.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  verify_schema.py
backend/alembic/: env.py
backend/alembic/versions/: db201faec95e_initial_schema.py
backend/api/: deps.py
backend/docs/: database-queries.md
backend/scripts/: seed_database.py
backend/src/: config.py
backend/src/models/: task.py  user.py
backend/tests/: conftest.py  test_cascade_deletion.py  test_constraints.py  test_id_architect.py  test_migrations.py  test_timestamps.py  test_user_model.py
chatbot-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  render.yaml
chatbot-backend/app/: config.py  main.py
chatbot-backend/app/server/: chatkit_server.py  (+1 more)
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/contexts/: ThemeContext.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api-client.ts  auth-client.ts  auth-helper.ts  auth.ts  chatkit-config.ts  error-handler.ts
frontend/types/: api.ts  user.ts
specs/002-database-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-chatbot-frontend/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-email-varification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+49 files in other folders)
